--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   
   <style>
-    /* Egyedi CSS a Profil Dropdown-hoz */
     .profile-dropdown {
         position: relative;
         display: inline-block;
@@ -64,16 +63,22 @@
         background-color: #7f00ff;
     }
 
-    /* Ikon stílusa */
     .profile-icon {
-        background: #fff;
-        color: #000;
-        border-radius: 50%;
-        padding: 5px 10px;
+        background: #000;
+        color: #fff;
+        
+        border-radius: 50%; 
+        width: 30px;
+        height: 30px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
         font-weight: 700;
         font-size: 1rem;
         margin-right: 5px;
-        display: inline-block;
+        margin-left: 10px;
     }
   </style>
 
