--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,10 +33,15 @@
         display: block;
     }
 
+    .profile-dropdown a {
+        display: flex; 
+        align-items: center; 
+        padding: 5px 0; 
+    }
+
     .profile-icon {
         background: #000;
         color: #fff;
-
         border-radius: 50%; 
         width: 30px; 
         height: 30px; 
@@ -59,7 +64,7 @@
     .profile-info p {
         font-size: 0.9rem;
         font-weight: 600;
-        color: #ff3aeb; 
+        color: #ff3aeb;
         margin: 0;
     }
     .profile-info small {
