Refactor profile link in layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -110,10 +110,11 @@
           <li><a href="/crud">Énekesek (CRUD)</a></li>
           
           <li class="profile-dropdown">
-            <a href="#" style="padding: 5px 0;">
-                <span class="profile-icon">👤</span> 
-                Üdv, <%= user.name %>
-            </a>
+    <a href="#">
+        <span class="profile-icon">👤</span> 
+        Üdv, <%= user.name %>
+    </a>
+    </li>
             
             <div class="profile-dropdown-content">
                 
