--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,11 +32,13 @@
     .profile-dropdown:hover .profile-dropdown-content {
         display: block;
     }
-
+    
     .profile-dropdown a {
         display: flex; 
         align-items: center; 
         padding: 5px 0; 
+        color: #fff;
+        text-decoration: none;
     }
 
     .profile-icon {
@@ -110,11 +112,10 @@
           <li><a href="/crud">Énekesek (CRUD)</a></li>
           
           <li class="profile-dropdown">
-    <a href="#">
-        <span class="profile-icon">👤</span> 
-        Üdv, <%= user.name %>
-    </a>
-    </li>
+            <a href="#">
+                <span class="profile-icon">👤</span> 
+                Üdv, <%= user.name %>
+            </a>
             
             <div class="profile-dropdown-content">
                 
