--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ body, html {
     display: none;
     position: absolute;
     right: 0;
+    top: 120%;
     background-color: #000;
     min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
